--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "history": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.1.1"
   },
